Update building-zap-with-intellij-idea.md
https://docs.oracle.com/en/java/javase/17/docs/specs/man/java.html

```
-XX:MaxPermSize=size
    Sets the maximum permanent generation space size (in bytes). This option was deprecated in JDK 8 and superseded by the -XX:MaxMetaspaceSize option. 
```

Signed-off-by: Yuuki Ebihara <yuuki.ebihara813@gmail.com>